# Ampel-ZTF

./: README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
alerts/: README.md
alerts/ipac/: 121540793515135009.avro  121540793515135010.avro
alerts/uli/: test_alerts_Ia_Hsiao_v2_51.avro  test_alerts_Ia_Hsiao_v2_52.avro  test_alerts_Ia_Hsiao_v2_53.avro  test_alerts_Ia_Hsiao_v2_54.avro  test_alerts_Ia_Hsiao_v2_55.avro
alerts/ztf_public_20180601/: 516401801315010009.avro  516434762915010006.avro  516442330015015017.avro  516442805615015004.avro  516476004815015005.avro
ampel/model/: ZTFLegacyChannelTemplate.py  ZTFPeriodicSummaryT3.py
ampel/run/: ZTF_t0.py  ztf_t0.py
ampel/template/: ZTFLegacyChannelTemplate.py  ZTFPeriodicSummaryT3.py  ZTFProcessLocalAlerts.py
ampel/ztf/: legacy_utils.py  utils.py
ampel/ztf/alert/: PhotoAlertPlotter.py  ZTFFPbotForcedPhotometryAlertSupplier.py  (+6 more)
conf/ampel-ztf/: ampel.json  ampel.yml
test/: test_alertprocessor.py
tests/: conftest.py  fixtures.py  test_DecentFilter.py  test_Healipixloader.py  test_PhotoAlertPlotter.py  test_SkyPortalClient.py  test_T2CatalogMatch.py  test_T2LightCurveFeatures.py  test_ZTFAlertStreamController.py  test_ZTFLegacyChannelTemplate.py  test_ZiAlertContentIngester.py  test_ZiAlertSupplier.py  test_ZiT0UpperLimitShaper.py  test_ZiT1ArchivalCompoundIngester.py  test_combiners.py  test_muxers.py
tests/__snapshots__/: test_ZiT0UpperLimitShaper.ambr
tests/test-data/: ZTF20abyfpze.avro  catalogmatch_config.yaml  decentfilter_config.yaml  testing-config.yaml
(+91 files in other folders)
